; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_monotonic_arm64.c_core_set_enabled.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_monotonic_arm64.c_core_set_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PMCR0 = common dso_local global i32 0, align 4
@PMCR0_INIT = common dso_local global i32 0, align 4
@PMCR0_FIXED_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @core_set_enabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @core_set_enabled() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @PMCR0, align 4
  %3 = call i32 @__builtin_arm_rsr64(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* @PMCR0_INIT, align 4
  %5 = load i32, i32* @PMCR0_FIXED_EN, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* %1, align 4
  %8 = or i32 %7, %6
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* @PMCR0, align 4
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @__builtin_arm_wsr64(i32 %9, i32 %10)
  ret void
}

declare dso_local i32 @__builtin_arm_rsr64(i32) #1

declare dso_local i32 @__builtin_arm_wsr64(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
